--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,17 +43,24 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   location: ^4.3.0
   firebase_messaging: ^11.2.12
+  firebase_analytics: ^9.1.4
   image_picker: ^0.8.5
   firebase_core: ^1.14.0
   flutter_local_notifications: ^9.4.0
+  flutter_launcher_icons: ^0.9.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/Logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
